@@ -820,10 +820,13 @@
 	  when creating test threads (16Kb stacksize).  The stack size should
 	  be controlled by the .config file or the OSTest won't work on platforms
 	  with memory constraints.
-	* netutils/thttpd: An initial port of Jef Poskanzer's THTTPD HTPPD server.
+	* netutils/thttpd: An initial port of Jef Poskanzer's THTTPD HTTP server.
           See http://acme.com/software/thttpd/.
 	* examples/thttpd: A basic test program for THTTPD
 	* configs/eagle100/thttpd: A build configuration for THTTPD on the Micromint
 	  Eagle-100 LMS6918 (Cortex-M3) board.
 	* lib/: Added strstr() and strpbrk().
+	* net/recvfrom.c: Sockets now support some non-blocking operations --
+	  specifically only for TCP/IP read operations when read-ahead buffering
+	  is enabled.
 
